# packages/api/src/controllers/account.ts
@@ -3,16 +3,16 @@ import {MongoClient} from 'mongodb'
 
 export default function (db: MongoClient): Record<string, (req: Request, res: Response) => Promise<unknown>> {
   return {
-    async createAccount (req: Request, res: Response) {
+    async create (req: Request, res: Response) {
 
     },
-    async getAccountInfo(req: Request, res: Response) {
+    async retrieve (req: Request, res: Response) {
 
     },
-    async updateAccountInfo(req: Request, res: Response) {
+    async update (req: Request, res: Response) {
 
     },
-    async deactivateAccount(req: Request, res: Response) {
+    async deactivate (req: Request, res: Response) {
 
     }
   }
